<?xml version="1.0"?>
<package format="2">
  <name>moveit_tests</name>
  <version>0.1.0</version>
  <description>The moveit_tests package</description>

  <maintainer email="gstavrinos@iit.demokritos.gr">George Stavrinos</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
